Fix user avatar overflow on non-standard image dimensions
Uses the object-fit CSS property

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -105,6 +105,12 @@ h1 .badge.is-tag.is-master-tag {
     display: flex;
     flex-direction: column;
     align-self: flex-end;
+
+    img {
+      width: 32px;
+      height: 32px;
+      object-fit: contain;
+    }
   }
 
   @media screen and (min-width: $screen-md) {
