--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -27,6 +27,9 @@
   img {
     min-height: 32px;
     min-width: 32px;
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
   }
 
   .user--meta {
